# sicifus

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  EXPERIMENTAL_VALIDATION_SUMMARY.md  LICENSE  MUTATION_ANALYSIS_SUMMARY.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_e73q.py
api/: index.html
docs/: api.md  experimental_validation.md  index.md  installation.md  interface_analysis.md  mutation_analysis.md  publishing.md  quickstart.md
docs/tutorials/: alignment.md  energy.md  ingestion.md  ligands.md  metadata.md  mutations.md  phylogenetics.md
examples/: README_DEMOS.md  atom_alignment_demo.py  barnase_variant_library_demo.py  calibrate_empirical.py  experimental_validation_demo.ipynb  experimental_validation_demo.py  interface_analysis_demo.ipynb  interface_analysis_demo.py  mutation_analysis_demo.ipynb  mutation_analysis_demo.py  serrano1993_experimental_data.csv  show_residues.py  test_setup.py
experimental_validation/: index.html
installation/: index.html
interface_analysis/: index.html
mutation_analysis/: index.html
publishing/: index.html
quickstart/: index.html
search/: search_index.json
src/sicifus/: __init__.py  align.py  analysis.py  api.py  atom_align.py  empirical.py  energy.py  io.py  kmer_index.py  mutate.py  visualization.py
tests/: conftest.py  test_alanine_dipeptide.py  test_atom_align.py  test_empirical.py  test_experimental_validation.py  test_interface_analysis.py  test_kmer.py  test_mutate.py  test_visualization.py
tutorials/alignment/: index.html
validation_data/: README.md
(+11 files in other folders)
