[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sicifus"
version = "0.4.1"
description = "A tool for massive structural biology analysis using Polars and CIF files."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Aarya Venkat", email = "aaryakat@outlook.com"},
]
dependencies = [
    "polars>=0.20.0",
    "gemmi>=0.6.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0,<2.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "biopython>=1.80",
    "numba>=0.57.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
viz = ["rdkit>=2022.9.0"]
energy = ["pdbfixer>=1.9", "openmm>=8.0"]
all = ["rdkit>=2022.9.0", "pdbfixer>=1.9", "openmm>=8.0"]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/arikat/sicifus"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests that run OpenMM minimisation (slow)"]

[tool.hatch.build.targets.wheel]
packages = ["src/sicifus"]
